# vector-db-playground

./: .gitignore  README.md
03-chromadb-basics/: main.py
examples/01-from-scratch/: main.py  vector_store.py
examples/02-faiss-basics/: main.py  requirements.txt
faiss-app/: main.py
numpy-faiss-basics/: main.py
vector-db-api/: faiss_algos.md  faiss_example.py  pyproject.toml  requirements.in   requirements.txt
vector-db-api/app/: dependencies.py  main.py
vector-db-api/app/config/: settings.py
vector-db-api/app/models/: document.py  search.py
vector-db-api/app/routes/: documents.py  search.py
vector-db-api/app/services/: embedding.py  index_factory.py  vector_store.py
vector-db-api/vector_db_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
